syntax = "proto3";

option java_package = "org.timemates.api.auth.email.requests";

message ConfirmLinkingRequest {
  string verificationHash = 1;
  string confirmationCode = 2;

  message Response {
    Status status = 1;

    enum Status {
      SUCCESS = 0;
      INVALID_CODE = 1;
      ATTEMPTS_EXCEED = 2;
    }
  }
}